@@ -62,5 +62,37 @@
       <fileset dir="${workspace.releases}/temp/${ant.project.name}-${release.version}"/>
     </zip>   
     <delete dir="${workspace.releases}/temp"/>
-  </target>  
+  </target> 
+  
+  <target name="changes">
+    <replaceregexp file="../aspect-js tutorial/CHANGES" match="&#x00E4;" replace="ae" flags="g"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES" match="&#x00C4;" replace="Ae" flags="g"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES" match="&#x00F6;" replace="oe" flags="g"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES" match="&#x00D6;" replace="Oe" flags="g"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES" match="&#x00FC;" replace="ue" flags="g"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES" match="&#x00DC;" replace="Ue" flags="g"/>
+      
+    <copy file="../aspect-js tutorial/CHANGES" tofile="../aspect-js tutorial/CHANGES.tmp" overwrite="true"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="^\s+" replace="" byline="false"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="(?s)^(.*?)[\r\n]+\d[\d\. x]+.*$" replace="\1" byline="false"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="^(.*?)\s*$" replace="\1  " flags="g" byline="true"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="^(\d[\.\d x]+)[^\r\n]*" replace="## \1" byline="false"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="^ {0,4}([A-Z]+:.*)\s*$" replace="\1" byline="true"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="(?s)[\r\n]+ [^\r\n]+" replace="" flags="g" byline="false"/>  
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="^(## \d[\.\d]+ \d+)(  )" replace="\1 (summary of the current version)\2" flags="g" byline="true"/>
+    <replaceregexp file="../aspect-js tutorial/CHANGES.tmp" match="^(## \d[\.\d]+ [\dx]+)(  )" replace="\1 (summary of the next version)\2" flags="g" byline="true"/>
+    <loadresource property="changes">
+      <file file="../aspect-js tutorial/CHANGES.tmp"/>
+    </loadresource>
+    <delete file="../aspect-js tutorial/CHANGES.tmp"/>
+    <replaceregexp file="../aspect-js tutorial/README.md"
+      match="(?si)(# Changes \(Change Log\)\s+).*?(\[Read more\])" flags="g" byline="false"
+      replace="\1${changes}${line.separator}${line.separator}\2"/>
+    <tstamp>
+      <format property="now.year" pattern="yyyy"/>
+    </tstamp>    
+    <replaceregexp file="../aspect-js tutorial/README.md"
+      match="(?si)(?&lt;=\(C\)\s)\d{4}\b" flags="g" byline="true"
+      replace="${now.year}"/>
+  </target>   
 </project>
